--- a/chat-practice-service/pom.xml
+++ b/chat-practice-service/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>chat-websocket</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
-		<main.class>service.ChatService</main.class>
+		<main.class>com.chat.webservice.ChatService</main.class>
 	</properties>
 
 	<build>
