--- a/ui/package.json
+++ b/ui/package.json
@@ -16,10 +16,11 @@
     "@angular/common": "2.0.0-rc.1",
     "@angular/compiler": "2.0.0-rc.1",
     "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
+    "bootstrap": "^4.0.0-alpha.2",
     "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
@@ -33,10 +34,13 @@
     "ember-cli-inject-live-reload": "^1.4.0",
     "jasmine-core": "^2.4.1",
     "jasmine-spec-reporter": "^2.4.0",
+    "jquery": "^2.2.4",
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
+    "node-sass": "^3.7.0",
     "protractor": "^3.3.0",
+    "tether": "^1.3.2",
     "ts-node": "^0.5.5",
     "tslint": "^3.6.0",
     "typescript": "^1.8.10",
