--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "2.0.0-rc.1",
     "bootstrap": "^4.0.0-alpha.2",
     "es6-shim": "^0.35.0",
+    "moment": "^2.13.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
@@ -38,6 +39,7 @@
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
+    "moment": "^2.13.0",
     "node-sass": "^3.7.0",
     "protractor": "^3.3.0",
     "tether": "^1.3.2",
