--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "2.0.0-rc.1",
     "bootstrap": "^4.0.0-alpha.2",
     "es6-shim": "^0.35.0",
+    "font-awesome": "^4.6.3",
     "moment": "^2.13.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
