--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.0.0-alpha.2",
     "es6-shim": "^0.35.0",
     "font-awesome": "^4.6.3",
+    "markdown-it": "^6.0.5",
     "moment": "^2.13.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
