--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
+    "autosize": "^3.0.15",
     "bootstrap": "^4.0.0-alpha.2",
     "es6-shim": "^0.35.0",
     "font-awesome": "^4.6.3",
