--- a/app.properties
+++ b/app.properties
@@ -1,7 +1,7 @@
 # The Database location and login, here's a sample
 jdbc_location=jdbc:postgresql://127.0.0.1/test
-jdbc_user=tyler
-jdbc_password=test
+jdbc_user=postgres
+jdbc_password=
 
 # The sorting for discussions, comments, and tags are:
 # Sorting score = 
