--- a/app.properties
+++ b/app.properties
@@ -1,5 +1,5 @@
 # The Database location and login, here's a sample
-jdbc_location=jdbc:postgresql://127.0.0.1/test
+jdbc_location=jdbc:postgresql://127.0.0.1/flowchat
 jdbc_user=postgres
 jdbc_password=
 
