--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ before_install:
 - psql -c 'create database flowchat;' -U postgres
 - cd service
 after_success:
-- export SSHPASS=$DEPLOY_PASS
-- sshpass -e ssh -o StrictHostKeyChecking=no $DEPLOY_USER@$DEPLOY_HOST "source ~/.nvm/nvm.sh;cd ~/git/flowchat;git pull;git checkout master;./install.sh -prod"
+- ./deploy.sh
 addons:
   postgresql: '9.3'
   apt:
