--- a/ui/package.json
+++ b/ui/package.json
@@ -24,11 +24,13 @@
     "autosize": "^3.0.15",
     "bootstrap": "^4.0.0-alpha.2",
     "es6-shim": "^0.35.0",
+    "favico.js": "^0.3.10",
     "font-awesome": "^4.6.3",
     "jquery": "^2.2.4",
     "markdown-it": "^6.0.5",
     "moment": "^2.13.0",
-    "ng2-bootstrap": "^1.0.17",
+    "ng2-bootstrap": "1.0.17",
+    "node-sass": "^3.8.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
