--- a/ui/package.json
+++ b/ui/package.json
@@ -1,59 +1,54 @@
 {
   "name": "flowchat",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start": "ng server",
+    "start": "ng serve",
     "postinstall": "typings install",
     "lint": "tslint \"src/**/*.ts\"",
-    "format": "clang-format -i -style=file --glob=src/**/*.ts",
+    "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.2",
-    "@angular/compiler": "2.0.0-rc.2",
-    "@angular/core": "2.0.0-rc.2",
-    "@angular/http": "2.0.0-rc.2",
-    "@angular/platform-browser": "2.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.2",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "angular2-toaster": "^0.3.5-rc.2",
-    "autosize": "^3.0.15",
-    "bootstrap": "^4.0.0-alpha.2",
-    "es6-shim": "^0.35.0",
-    "favico.js": "^0.3.10",
-    "font-awesome": "^4.6.3",
-    "jquery": "^2.2.4",
+    "@angular/common": "2.0.0-rc.3",
+    "@angular/compiler": "2.0.0-rc.3",
+    "@angular/core": "2.0.0-rc.3",
+    "@angular/forms": "0.2.0",
+    "@angular/http": "2.0.0-rc.3",
+    "@angular/platform-browser": "2.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.3",
+    "@angular/router": "3.0.0-alpha.8",
+    "es6-shim": "0.35.1",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.26",
+    "zone.js": "0.6.12",
     "markdown-it": "^6.0.5",
     "moment": "^2.13.0",
     "ng2-bootstrap": "1.0.17",
     "node-sass": "^3.8.0",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.26",
-    "zone.js": "^0.6.12"
+    "favico.js": "^0.3.10",
+    "font-awesome": "^4.6.3",
+    "angular2-toaster": "^0.3.5-rc.2",
+    "autosize": "^3.0.15",
+    "bootstrap": "^4.0.0-alpha.2"
   },
   "devDependencies": {
-    "angular-cli": "^1.0.0-beta.0",
-    "clang-format": "^1.0.35",
-    "codelyzer": "0.0.14",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "jasmine-core": "^2.4.1",
-    "jasmine-spec-reporter": "^2.4.0",
-    "jquery": "^2.2.4",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-jasmine": "^0.3.8",
-    "moment": "^2.13.0",
-    "node-sass": "^3.7.0",
-    "protractor": "^3.3.0",
-    "tether": "^1.3.2",
-    "ts-node": "^0.5.5",
-    "tslint": "^3.6.0",
-    "typescript": "^1.8.10",
-    "typings": "^0.8.1"
+    "angular-cli": "1.0.0-beta.9",
+    "codelyzer": "0.0.20",
+    "ember-cli-inject-live-reload": "1.4.0",
+    "jasmine-core": "2.4.1",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "0.13.22",
+    "karma-chrome-launcher": "0.2.3",
+    "karma-jasmine": "0.3.8",
+    "protractor": "3.3.0",
+    "ts-node": "0.5.5",
+    "tslint": "3.11.0",
+    "typescript": "1.8.10",
+    "typings": "0.8.1"
   }
 }
