--- a/ui/package.json
+++ b/ui/package.json
@@ -21,20 +21,21 @@
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-alpha.8",
+    "angular2-toaster": "^0.3.5-rc.2",
+    "autosize": "^3.0.15",
+    "bootstrap": "^4.0.0-alpha.2",
     "es6-shim": "0.35.1",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.26",
-    "zone.js": "0.6.12",
+    "favico.js": "^0.3.10",
+    "font-awesome": "^4.6.3",
     "markdown-it": "^6.0.5",
+    "markdown-it-emoji": "^1.2.0",
     "moment": "^2.13.0",
     "ng2-bootstrap": "1.0.23",
     "node-sass": "^3.8.0",
-    "favico.js": "^0.3.10",
-    "font-awesome": "^4.6.3",
-    "angular2-toaster": "^0.3.5-rc.2",
-    "autosize": "^3.0.15",
-    "bootstrap": "^4.0.0-alpha.2"
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.26",
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
     "angular-cli": "1.0.0-beta.9",
