--- a/ui/package.json
+++ b/ui/package.json
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
     "angular-cli": "^1.0.0-beta.11-webpack.8",
-    "awesome-typescript-loader": "^2.2.1",
+    "awesome-typescript-loader": "2.2.1",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
