--- a/ui/package.json
+++ b/ui/package.json
@@ -12,36 +12,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
-    "@angular/upgrade": "2.0.0",
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "~3.1.0",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "ts-helpers": "^1.1.1",
     "angular2-toaster": "^1.0.1",
+    "zone.js": "^0.6.23",
     "autosize": "^3.0.15",
     "bootstrap": "^4.0.0-alpha.4",
-    "core-js": "^2.4.1",
-    "es6-shim": "0.35.1",
     "favico.js": "^0.3.10",
     "font-awesome": "^4.6.3",
     "markdown-it": "^6.0.5",
     "markdown-it-emoji": "^1.2.0",
     "moment": "^2.13.0",
     "ng2-bootstrap": "^1.1.5",
-    "node-sass": "^3.8.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "node-sass": "^3.8.0"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
+    "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.19-3",
-    "codelyzer": "~0.0.26",
+    "codelyzer": "1.0.0-beta.1",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -49,9 +47,10 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.5",
+    "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "2.0.2"
+    "typescript": "~2.0.3",
+    "webdriver-manager": "10.2.5"
   }
 }
