--- a/ui/package.json
+++ b/ui/package.json
@@ -12,44 +12,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.1.0",
-    "@angular/compiler": "~2.1.0",
-    "@angular/core": "~2.1.0",
-    "@angular/forms": "~2.1.0",
-    "@angular/http": "~2.1.0",
-    "@angular/platform-browser": "~2.1.0",
-    "@angular/platform-browser-dynamic": "~2.1.0",
-    "@angular/router": "~3.1.0",
+    "@angular/common": "^2.3.1",
+    "@angular/compiler": "^2.3.1",
+    "@angular/core": "^2.3.1",
+    "@angular/forms": "^2.3.1",
+    "@angular/http": "^2.3.1",
+    "@angular/platform-browser": "^2.3.1",
+    "@angular/platform-browser-dynamic": "^2.3.1",
+    "@angular/router": "^3.3.1",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "angular2-toaster": "^1.0.1",
-    "zone.js": "^0.6.23",
+    "zone.js": "^0.7.2",
     "autosize": "^3.0.15",
     "bootstrap": "^4.0.0-alpha.4",
     "favico.js": "^0.3.10",
-    "font-awesome": "^4.6.3",
+    "font-awesome": "^4.7.0",
     "markdown-it": "^6.0.5",
     "markdown-it-emoji": "^1.2.0",
     "moment": "^2.13.0",
-    "ng2-bootstrap": "^1.1.5",
-    "node-sass": "^3.8.0"
+    "ng2-bootstrap": "1.1.16-11"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.2.30",
+    "@angular/compiler-cli": "^2.3.1",
+    "@types/jasmine": "^2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.19-3",
-    "codelyzer": "1.0.0-beta.1",
-    "jasmine-core": "2.4.1",
+    "angular-cli": "1.0.0-beta.24",
+    "codelyzer": "~2.0.0-beta.1",
+    "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.9",
+    "protractor": "~4.0.13",
     "ts-node": "1.2.1",
-    "tslint": "3.13.0",
+    "tslint": "^4.0.2",
     "typescript": "~2.0.3",
     "webdriver-manager": "10.2.5"
   }
