--- a/ui/package.json
+++ b/ui/package.json
@@ -12,33 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.1.0",
-    "@angular/compiler": "~2.1.0",
-    "@angular/core": "~2.1.0",
-    "@angular/forms": "~2.1.0",
-    "@angular/http": "~2.1.0",
-    "@angular/platform-browser": "~2.1.0",
-    "@angular/platform-browser-dynamic": "~2.1.0",
-    "@angular/router": "~3.1.0",
-    "core-js": "^2.4.1",
-    "rxjs": "5.0.0-beta.12",
-    "ts-helpers": "^1.1.1",
-    "angular2-toaster": "^1.0.1",
-    "zone.js": "^0.6.23",
+    "@angular/common": "^2.1.0",
+    "@angular/compiler": "^2.1.0",
+    "@angular/core": "^2.1.0",
+    "@angular/forms": "^2.1.0",
+    "@angular/http": "^2.1.0",
+    "@angular/platform-browser": "^2.1.0",
+    "@angular/platform-browser-dynamic": "^2.1.0",
+    "@angular/router": "^3.1.0",
+    "angular2-toaster": "^2.0.0",
     "autosize": "^3.0.15",
     "bootstrap": "^4.0.0-alpha.4",
+    "core-js": "^2.4.1",
     "favico.js": "^0.3.10",
     "font-awesome": "^4.6.3",
     "markdown-it": "^6.0.5",
     "markdown-it-emoji": "^1.2.0",
     "moment": "^2.13.0",
     "ng2-bootstrap": "^1.1.5",
-    "node-sass": "^3.8.0"
+    "node-sass": "^3.8.0",
+    "rxjs": "^5.2.0",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0-rc.0",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.19-3",
     "codelyzer": "1.0.0-beta.1",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
@@ -50,7 +50,7 @@
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "~2.0.3",
+    "typescript": "2.1.4",
     "webdriver-manager": "10.2.5"
   }
 }
