--- a/ui/package.json
+++ b/ui/package.json
@@ -33,7 +33,8 @@
     "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "zooming": "^1.2.4"
   },
   "devDependencies": {
     "@angular/cli": "^1.3.2",
