--- a/ui/package.json
+++ b/ui/package.json
@@ -13,15 +13,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.1.3",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "angular2-toaster": "^4.0.0",
+    "@angular/common": "4.3.6",
+    "@angular/compiler": "4.3.6",
+    "@angular/core": "4.3.6",
+    "@angular/forms": "4.3.6",
+    "@angular/http": "4.3.6",
+    "@angular/platform-browser": "4.3.6",
+    "@angular/platform-browser-dynamic": "4.3.6",
+    "@angular/router": "4.3.6",
+    "angular2-toaster": "^4.0.1",
     "autosize": "^3.0.15",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.3.2",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/compiler-cli": "4.3.6",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
