Upgrading bootswatch, switching to cyborg theme. Fixes #88. Fixes #135. Fixes #136.

--- a/ui/package.json
+++ b/ui/package.json
@@ -12,33 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.1.3",
-    "@angular/common": "^4.4.3",
-    "@angular/compiler": "^4.4.3",
-    "@angular/core": "^4.4.3",
-    "@angular/forms": "^4.4.3",
-    "@angular/http": "^4.4.3",
-    "@angular/platform-browser": "^4.4.3",
-    "@angular/platform-browser-dynamic": "^4.4.3",
-    "@angular/router": "^4.4.3",
+    "@angular/animations": "^5.2.0",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
     "angular2-toaster": "^4.0.1",
     "autosize": "^3.0.15",
-    "bootstrap": "4.0.0-alpha.6",
+    "bootswatch": "^4.0.0",
     "core-js": "^2.4.1",
     "favico.js": "^0.3.10",
     "font-awesome": "^4.7.0",
-    "markdown-it": "^6.0.5",
+    "markdown-it": "^8.3.1",
     "markdown-it-emoji": "^1.2.0",
     "moment": "^2.17.1",
-    "ngx-bootstrap": "^1.6.6",
-    "rxjs": "^5.1.0",
+    "ngx-bootstrap": "^2.0.0-rc.0",
+    "rxjs": "^5.5.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.8.4",
     "zooming": "^1.2.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.3.2",
-    "@angular/compiler-cli": "^4.4.3",
+    "@angular/cli": "^1.6.5",
+    "@angular/compiler-cli": "^5.2.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
@@ -53,6 +53,6 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "~2.4.2"
   }
 }
