Adding masonry. Fixes #134.

--- a/ui/package.json
+++ b/ui/package.json
@@ -27,10 +27,12 @@
     "core-js": "^2.4.1",
     "favico.js": "^0.3.10",
     "font-awesome": "^4.7.0",
+    "imagesloaded": "^4.1.4",
     "markdown-it": "^8.3.1",
     "markdown-it-emoji": "^1.2.0",
     "moment": "^2.17.1",
     "ngx-bootstrap": "^2.0.0-rc.0",
+    "ngx-masonry": "^0.5.4",
     "rxjs": "^5.5.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.8.4",
