Upgrading spark. Tweaking zooming. Fixing docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       FLOWCHAT_DB_URL: "jdbc:postgresql://flowchat_db/flowchat"
       FLOWCHAT_DB_USERNAME: "postgres"
       FLOWCHAT_DB_PASSWORD: "example"
+      SORTING_CREATED_WEIGHT:  3600.0000
+      SORTING_NUMBER_OF_VOTES_WEIGHT: 0.0010
+      SORTING_AVG_RANK_WEIGHT: 0.0100
 
   flowchat_db:
     image: postgres
