--- a/ui/package.json
+++ b/ui/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/animations": "^6.0.1",
+    "@angular/common": "^6.0.1",
+    "@angular/compiler": "^6.0.1",
+    "@angular/core": "^6.0.1",
+    "@angular/forms": "^6.0.1",
+    "@angular/http": "^6.0.1",
+    "@angular/platform-browser": "^6.0.1",
+    "@angular/platform-browser-dynamic": "^6.0.1",
+    "@angular/router": "^6.0.1",
     "angular2-toaster": "^4.0.1",
     "autosize": "^3.0.15",
     "bootswatch": "^4.0.0",
@@ -33,14 +33,16 @@
     "moment": "^2.17.1",
     "ngx-bootstrap": "^2.0.0-rc.0",
     "ngx-masonry": "^1.0.7",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.8.4",
+    "zone.js": "^0.8.26",
     "zooming": "^1.4.2"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.3",
-    "@angular/compiler-cli": "^5.2.0",
+    "@angular-devkit/build-angular": "~0.6.1",
+    "@angular/cli": "^6.0.5",
+    "@angular/compiler-cli": "^6.0.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
@@ -52,9 +54,9 @@
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.0",
+    "protractor": "^5.3.2",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.4.2"
+    "typescript": "2.7.2"
   }
 }
