--- a/ui/package.json
+++ b/ui/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "^6.0.1",
     "angular2-toaster": "^4.0.1",
     "autosize": "^3.0.15",
-    "bootswatch": "^4.0.0",
+    "bootswatch": "^4.1.1",
     "core-js": "^2.4.1",
     "favico.js": "^0.3.10",
     "font-awesome": "^4.7.0",
@@ -31,8 +31,8 @@
     "markdown-it": "^8.3.1",
     "markdown-it-emoji": "^1.2.0",
     "moment": "^2.17.1",
-    "ngx-bootstrap": "^2.0.0-rc.0",
-    "ngx-masonry": "^1.0.7",
+    "ngx-bootstrap": "^3.0.0",
+    "ngx-masonry": "^1.1.2",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "ts-helpers": "^1.1.1",
