--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^6.0.1",
     "@angular/platform-browser-dynamic": "^6.0.1",
     "@angular/router": "^6.0.1",
+    "@auth0/angular-jwt": "^2.0.0",
     "angular2-toaster": "^4.0.1",
     "autosize": "^3.0.15",
     "bootswatch": "^4.1.1",
@@ -33,15 +34,17 @@
     "moment": "^2.17.1",
     "ngx-bootstrap": "^3.0.0",
     "ngx-masonry": "^1.1.2",
+    "masonry-layout": "^4.2.1",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.8.26",
     "zooming": "^1.4.2"
+    
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "^6.0.5",
+    "@angular/cli": "^6.0.7",
     "@angular/compiler-cli": "^6.0.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
