--- a/ui/package.json
+++ b/ui/package.json
@@ -15,19 +15,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.7",
-    "@angular/common": "^6.1.7",
-    "@angular/compiler": "^6.1.7",
-    "@angular/core": "^6.1.7",
-    "@angular/forms": "^6.1.7",
-    "@angular/http": "^6.1.7",
-    "@angular/platform-browser": "^6.1.7",
-    "@angular/platform-browser-dynamic": "^6.1.7",
-    "@angular/router": "^6.1.7",
+    "@angular/animations": "^6.1.9",
+    "@angular/common": "^6.1.9",
+    "@angular/compiler": "^6.1.9",
+    "@angular/core": "^6.1.9",
+    "@angular/forms": "^6.1.9",
+    "@angular/http": "^6.1.9",
+    "@angular/platform-browser": "^6.1.9",
+    "@angular/platform-browser-dynamic": "^6.1.9",
+    "@angular/router": "^6.1.9",
     "@auth0/angular-jwt": "^2.0.0",
-    "angular2-toaster": "^4.0.1",
+    "angular2-toaster": "^6.1.0",
     "autosize": "^3.0.15",
-    "bootswatch": "^4.1.1",
+    "bootswatch": "^4.1.3",
     "core-js": "^2.4.1",
     "favico.js": "^0.3.10",
     "font-awesome": "^4.7.0",
@@ -35,34 +35,33 @@
     "markdown-it": "^8.3.1",
     "markdown-it-emoji": "^1.2.0",
     "moment": "^2.17.1",
-    "ngx-bootstrap": "^3.0.0",
+    "ngx-bootstrap": "^3.0.1",
     "ngx-masonry": "^1.1.2",
     "masonry-layout": "^4.2.1",
-    "rxjs": "^6.1.0",
+    "rxjs": "^6.3.3",
     "rxjs-compat": "^6.1.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.8.26",
     "zooming": "^1.4.2"
-    
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "^6.2.2",
-    "@angular/compiler-cli": "^6.1.7",
+    "@angular/cli": "^6.2.3",
+    "@angular/compiler-cli": "^6.1.9",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
+    "codelyzer": "^4.4.4",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.3.2",
+    "protractor": "^5.4.1",
     "ts-node": "^7.0.1",
-    "tslint": "~4.5.0",
-    "typescript": "2.7.2"
+    "tslint": "^5.11.0",
+    "typescript": "~2.7.0"
   }
 }
