--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ services:
 before_install:
 - psql -c "create user flowchat with password 'asdf' superuser" -U postgres
 - psql -c 'create database flowchat;' -U postgres
-- cd ui; yarn; yarn build --prod --aot;
+- cd ui; 
+- echo "export const environment = {production: true,endpoint: 'https://flow-chat.com/',websocket: 'wss://flow-chat.com/poll'};" > src/environments/environment.prod.ts
+- yarn; yarn build;
 - cp -R dist/ ../service/src/main/resources
 - cd ../service
 - echo -e 'jdbc.url=jdbc\:postgresql\://127.0.0.1/flowchat\njdbc.username=flowchat\njdbc.password=asdf\nsorting_created_weight=86400\nsorting_number_of_votes_weight=0.001\nsorting_avg_rank_weight=0.01\nreddit_client_id=\nreddit_client_secret=\nreddit_username=\nreddit_password='>flowchat.properties
