--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_install:
 - psql -c "create user flowchat with password 'asdf' superuser" -U postgres
 - psql -c 'create database flowchat;' -U postgres
 - cd ui; 
-- echo "export const environment = {production: true,endpoint: 'https://flow-chat.com/',websocket: 'wss://flow-chat.com/poll'};" > src/environments/environment.prod.ts
+- |- 
+  echo "export const environment = {production: true,endpoint: 'https://flow-chat.com/',websocket: 'wss://flow-chat.com/poll'};" > src/environments/environment.prod.ts
 - yarn; yarn build;
 - cp -R dist/ ../service/src/main/resources
 - cd ../service
